@@ -1,3 +1,4 @@
+* Add default order on product and template
 * Check price_decimal configuration
 
 Version 5.6.0 - 2020-05-04
